--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>ぷらくてぃすまもまも</h1>
+    <button type="button">これはボタンだよ</button>
     <script src="main.js"></script>
 </body>
 </html>
